# src/routes/order.route.js
@@ -6,6 +6,7 @@ import {
   getMyOrderByIdController,
   getMyOrdersController,
 } from "../controllers/order.controller.js";
+import { initiatePaymentController } from "../controllers/payment.controller.js";
 import { authRequired, authorization } from "../middlewares/auth.middleware.js";
 
 const router = express.Router();
@@ -18,5 +19,6 @@ router.post("/pickup", createPickupOrderController);
 router.get("/", getMyOrdersController);
 router.get("/:id", getMyOrderByIdController);
 router.patch("/:id/cancel", cancelMyOrderController);
+router.post("/:id/pay", initiatePaymentController);
 
 export default router;
