# src/routes/payment.route.js
@@ -1,0 +1,8 @@
+import express from "express";
+import { midtransNotificationController } from "../controllers/payment.controller.js";
+
+const router = express.Router();
+
+router.post("/midtrans/notification", midtransNotificationController);
+
+export default router;
